[gd_scene load_steps=9 format=3 uid="uid://xivfjic6ii6x"]

[ext_resource type="Script" path="res://Levels/LevelBase.gd" id="1_yb6sd"]
[ext_resource type="TileSet" uid="uid://dg14hgfkpi1uq" path="res://Tilemap/assets/TileSet.tres" id="2_ssdbx"]
[ext_resource type="PackedScene" uid="uid://u8o87wc4omic" path="res://Entities/Sheep/sheep.tscn" id="4_b5t7m"]
[ext_resource type="Script" path="res://Levels/Camera2D.gd" id="4_vf1sj"]
[ext_resource type="PackedScene" uid="uid://gt70u8oafjjk" path="res://Entities/Human/human.tscn" id="5_204je"]
[ext_resource type="Script" path="res://Tilemap/scripts/CaptureArea.gd" id="6_ry27q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p34s7"]
size = Vector2(38, 7)

[sub_resource type="GDScript" id="GDScript_b82f2"]
script/source = "extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="LevelBase" type="Node2D"]
y_sort_enabled = true
position = Vector2(20, -1)
script = ExtResource("1_yb6sd")

[node name="CaptureArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("6_ry27q")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CaptureArea"]
position = Vector2(9, 0)

[node name="boundaries" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="boundaries"]
collision_layer = 2
collision_mask = 5

[node name="leftDown" type="CollisionPolygon2D" parent="boundaries/StaticBody2D"]
polygon = PackedVector2Array(0, 367, -736, -1, -737, 0, 0, 369)

[node name="leftUp" type="CollisionPolygon2D" parent="boundaries/StaticBody2D"]
polygon = PackedVector2Array(-735, 1, 0, -367, 0, -368, -736, 0)

[node name="rightUp" type="CollisionPolygon2D" parent="boundaries/StaticBody2D"]
polygon = PackedVector2Array(0, -367, 735, 1, 736, 0, 0, -368)

[node name="rightDown" type="CollisionPolygon2D" parent="boundaries/StaticBody2D"]
polygon = PackedVector2Array(736, -1, 0, 367, 0, 369, 736, 1)

[node name="bottom" type="CollisionShape2D" parent="boundaries/StaticBody2D"]
position = Vector2(-2, 361)
shape = SubResource("RectangleShape2D_p34s7")

[node name="top" type="CollisionShape2D" parent="boundaries/StaticBody2D"]
position = Vector2(0, -363)
shape = SubResource("RectangleShape2D_p34s7")

[node name="left" type="CollisionShape2D" parent="boundaries/StaticBody2D"]
position = Vector2(-722, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_p34s7")

[node name="right" type="CollisionShape2D" parent="boundaries/StaticBody2D"]
position = Vector2(720, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_p34s7")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_ssdbx")
format = 2
layer_0/name = "Grass"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(1441791, 6, 0, 1376255, 6, 0, 1310718, 6, 0, 1245182, 6, 0, 1179645, 6, 0, 1114109, 6, 0, 1048572, 6, 0, 983036, 6, 0, 917499, 6, 0, 851963, 6, 0, 786426, 6, 0, 720890, 6, 0, 655353, 6, 0, 589817, 6, 0, 524280, 6, 0, 458744, 6, 0, 393207, 6, 3, 327671, 6, 3, 262134, 6, 0, 196598, 6, 0, 131061, 6, 0, 65525, 6, 0, -12, 6, 0, -65547, 6, 0, -131083, 6, 0, -196618, 6, 0, -262154, 6, 0, -262153, 6, 0, -327688, 6, 0, -393224, 6, 0, -458759, 6, 0, -524295, 6, 0, -589830, 6, 0, -327689, 6, 0, -393225, 6, 3, -458760, 6, 0, -524296, 6, 0, -589831, 6, 0, -786438, 6, 0, -851973, 6, 0, -917509, 6, 0, -983044, 6, 0, -1048580, 6, 0, -1114115, 6, 0, -1179651, 6, 0, -1245186, 6, 0, -1310722, 6, 0, -1376257, 6, 0, -1441793, 6, 0, -1441792, 6, 0, -1376256, 6, 0, -1310719, 6, 0, -1245183, 6, 0, -1179646, 6, 0, -1114110, 6, 0, -1048573, 6, 0, -983037, 6, 0, -917500, 6, 0, -851964, 6, 0, -786427, 6, 0, -720891, 6, 0, -655354, 6, 0, -589818, 6, 0, -524281, 6, 0, -458745, 6, 0, -393208, 6, 0, -327672, 6, 0, -262135, 6, 0, -196599, 6, 0, -131062, 6, 0, -65526, 6, 0, 10, 6, 0, 65545, 6, 0, 131081, 6, 0, 131080, 6, 0, 196615, 6, 0, 262151, 6, 0, 327686, 6, 3, 393222, 6, 0, 458757, 6, 0, 196616, 6, 0, 262152, 6, 0, 327687, 6, 0, 393223, 6, 0, 458758, 6, 0, 524294, 6, 0, 589829, 6, 0, 655365, 6, 0, 720900, 6, 0, 786436, 6, 0, 851971, 6, 0, 917507, 6, 0, 983042, 6, 2, 1114113, 6, 0, 1179649, 6, 0, 1245184, 6, 0, 1310720, 6, 0, 851968, 6, 2, 786433, 6, 0, 720897, 6, 0, 655362, 6, 0, 589826, 6, 3, 524291, 6, 0, 458755, 6, 0, 393220, 6, 0, 327684, 6, 0, 262149, 6, 0, 196613, 6, 0, 131078, 6, 0, 65542, 6, 0, 7, 6, 0, -65529, 6, 0, -131064, 6, 3, -196600, 6, 0, -262136, 6, 0, -327673, 6, 0, -393209, 6, 0, -458746, 6, 0, -524282, 6, 0, -589819, 6, 0, -655355, 6, 0, -720892, 6, 0, -786428, 6, 0, -851965, 6, 0, -917501, 6, 0, -983038, 6, 0, -1048574, 6, 0, -1114111, 6, 0, -1179647, 6, 0, -1245184, 6, 0, -1310720, 6, 3, -1310721, 6, 0, -1245185, 6, 0, -1179650, 6, 0, -1114114, 6, 0, -1048579, 6, 3, -983043, 6, 0, -917508, 6, 0, -851972, 6, 0, -786437, 6, 0, -720901, 6, 0, -655366, 6, 0, -589829, 6, 0, -655365, 6, 0, -720900, 6, 0, -786436, 6, 0, -851971, 6, 0, -917507, 6, 0, -983042, 6, 0, -1048578, 6, 0, -1114113, 6, 0, -1179649, 6, 0, -1179648, 6, 0, -1048577, 6, 3, -983041, 6, 3, -917506, 6, 0, -851970, 6, 0, -786435, 6, 0, -720899, 6, 3, -655364, 6, 0, -589828, 6, 0, -524293, 6, 0, -458757, 6, 0, -524294, 6, 0, -458758, 6, 0, -393223, 6, 0, -327687, 6, 0, -262152, 6, 0, -196616, 6, 0, -131081, 6, 0, -196617, 6, 0, -131082, 6, 0, -65546, 6, 0, -11, 6, 0, 65526, 6, 0, -10, 6, 0, -65545, 6, 0, -9, 6, 0, -65544, 6, 0, -131080, 6, 0, -196615, 6, 0, -262151, 6, 0, -327686, 6, 0, -393222, 6, 0, -327685, 6, 0, -393221, 6, 0, -458756, 6, 0, -524292, 6, 0, -589827, 6, 0, -655363, 6, 0, -720898, 6, 0, -786434, 6, 0, -851969, 6, 0, -917505, 6, 0, -1048576, 6, 0, -1114112, 6, 0, -1048575, 6, 0, -983040, 6, 0, -917504, 6, 0, -786433, 6, 0, -720897, 6, 0, -655362, 6, 0, -589826, 6, 0, -524291, 6, 0, -458755, 6, 0, -393220, 6, 0, -327684, 6, 0, -262149, 6, 0, -196613, 6, 0, -262150, 6, 0, -196614, 6, 0, -131079, 6, 0, -65543, 6, 0, -8, 6, 0, 65528, 6, 0, 131063, 6, 0, 65527, 6, 0, 131062, 6, 0, 196599, 6, 0, 262135, 6, 0, 196600, 6, 0, 131064, 6, 0, 65529, 6, 0, -7, 6, 0, -65542, 6, 0, -131078, 6, 0, -65541, 6, 0, -131077, 6, 0, -196612, 6, 0, -262148, 6, 0, -327683, 6, 0, -393219, 6, 0, -458754, 6, 0, -524290, 6, 0, -589825, 6, 0, -655361, 6, 0, -786432, 6, 0, -851968, 6, 0, -917503, 6, 0, -983039, 6, 0, -917502, 6, 0, -851967, 6, 0, -786431, 6, 0, -720896, 6, 1, -655360, 6, 0, -524289, 6, 0, -458753, 6, 1, -393218, 6, 0, -327682, 6, 0, -262147, 6, 2, -196611, 6, 0, -131076, 6, 0, -65540, 6, 0, -5, 6, 0, 65531, 6, 2, -6, 6, 0, 65530, 6, 0, 131065, 6, 0, 196601, 6, 0, 262136, 6, 0, 327672, 6, 0, 393208, 6, 0, 327673, 6, 0, 262137, 6, 0, 196602, 6, 0, 131066, 6, 2, 196603, 6, 0, 131067, 6, 2, 65532, 6, 0, -4, 6, 0, -65539, 6, 0, -131075, 6, 0, -196610, 6, 0, -262146, 6, 0, -327681, 6, 0, -393217, 6, 0, -524288, 6, 0, -589824, 6, 0, -655359, 6, 1, -720895, 6, 0, -786430, 6, 0, -851966, 6, 0, -786429, 6, 0, -655358, 6, 0, -589823, 6, 1, -524287, 6, 1, -458752, 6, 0, -393216, 6, 0, -262145, 6, 0, -196609, 6, 0, -131074, 6, 0, -65538, 6, 0, -3, 6, 0, 65533, 6, 0, 131068, 6, 0, 196604, 6, 0, 262139, 6, 0, 327675, 6, 0, 262138, 6, 0, 327674, 6, 0, 393209, 6, 0, 458745, 6, 0, 524281, 6, 0, 458746, 6, 0, 393210, 6, 0, 458747, 6, 0, 393211, 6, 0, 327676, 6, 0, 196605, 6, 0, 131069, 6, 0, 65534, 6, 0, -2, 6, 0, -65537, 6, 0, -131073, 6, 0, -262144, 6, 0, -327680, 6, 0, -393215, 6, 0, -458751, 6, 1, -524286, 6, 0, -589822, 6, 0, -655357, 6, 0, -720893, 6, 0, -655356, 6, 0, -589821, 6, 3, -524285, 6, 0, -458750, 6, 0, -393214, 6, 1, -262143, 6, 0, -196608, 6, 0, -131072, 6, 0, -1, 6, 0, 65535, 6, 0, 131070, 6, 0, 196606, 6, 0, 327677, 6, 0, 393212, 6, 0, 458748, 6, 0, 524283, 6, 0, 589819, 6, 0, 524282, 6, 0, 589818, 6, 0, 655354, 6, 0, 720891, 6, 0, 655355, 6, 0, 589820, 6, 0, 524284, 6, 0, 458749, 6, 0, 393213, 6, 3, 262142, 6, 0, 196607, 6, 0, 131071, 6, 0, 0, 6, 0, -65536, 6, 0, -131071, 6, 0, -196607, 6, 0, -262142, 6, 0, -327678, 6, 0, -393213, 6, 0, -458749, 6, 0, -524284, 6, 0, -589820, 6, 0, -524283, 6, 0, -458748, 6, 0, -393212, 6, 0, -327677, 6, 0, -262141, 6, 0, -196606, 6, 3, -131070, 6, 0, -65535, 6, 3, 1, 6, 0, 65536, 6, 0, 131072, 6, 0, 262143, 6, 0, 327679, 6, 0, 458750, 6, 0, 524285, 6, 0, 589821, 6, 0, 655356, 6, 2, 720892, 6, 0, 786427, 6, 0, 851964, 6, 0, 786428, 6, 0, 720893, 6, 0, 655357, 6, 0, 589822, 6, 0, 524286, 6, 0, 393215, 6, 0, 262144, 6, 0, 196608, 6, 0, 131073, 6, 0, 65537, 6, 0, 2, 6, 0, -65534, 6, 0, -131069, 6, 0, -196605, 6, 0, -262140, 6, 0, -327676, 6, 0, -393211, 6, 0, -458747, 6, 0, -393210, 6, 0, -327675, 6, 0, -262139, 6, 0, -196604, 6, 0, -131068, 6, 0, -65533, 6, 0, 3, 6, 0, 65538, 6, 0, 131074, 6, 0, 196609, 6, 1, 262145, 6, 0, 327680, 6, 0, 393216, 6, 0, 589823, 6, 0, 655358, 6, 3, 720894, 6, 0, 786429, 6, 0, 851965, 6, 0, 917500, 6, 0, 983037, 6, 0, 917501, 6, 0, 851966, 6, 0, 786430, 6, 2, 720895, 6, 2, 655359, 6, 0, 458752, 6, 0, 393217, 6, 0, 327681, 6, 0, 262146, 6, 0, 196610, 6, 0, 131075, 6, 0, 65539, 6, 0, 4, 6, 1, -65532, 6, 0, -131067, 6, 0, -196603, 6, 0, -262138, 6, 3, -327674, 6, 0, -262137, 6, 0, -196602, 6, 0, -131066, 6, 0, -65531, 6, 0, 5, 6, 0, 65540, 6, 0, 131076, 6, 0, 196611, 6, 0, 262147, 6, 0, 327682, 6, 0, 393218, 6, 0, 458753, 6, 0, 524289, 6, 0, 655360, 6, 0, 786431, 6, 0, 851967, 6, 0, 917502, 6, 0, 983038, 6, 0, 1048573, 6, 0, 1114110, 6, 0, 1048574, 6, 0, 983039, 6, 0, 917503, 6, 0, 786432, 6, 0, 720896, 6, 0, 589825, 6, 0, 524290, 6, 0, 458754, 6, 0, 393219, 6, 0, 327683, 6, 0, 262148, 6, 0, 196612, 6, 0, 131077, 6, 0, 65541, 6, 0, 6, 6, 1, -65530, 6, 0, -131065, 6, 0, -196601, 6, 0, 917504, 6, 0, 1048575, 6, 0, 1114111, 6, 3, 1179646, 6, 0, 1245183, 6, 0, 1179647, 6, 0, 1048576, 6, 0, 983040, 6, 0, 917505, 6, 0, 851969, 6, 0, 786434, 6, 0, 720898, 6, 0, 655363, 6, 0, 589827, 6, 0, 524292, 6, 0, 458756, 6, 0, 393221, 6, 0, 327685, 6, 0, 262150, 6, 0, 196614, 6, 0, 131079, 6, 0, 65543, 6, 0, 8, 6, 0, -65528, 6, 0, -131063, 6, 0, -65527, 6, 0, 9, 6, 0, 65544, 6, 0, 524293, 6, 0, 589828, 6, 0, 655364, 6, 0, 720899, 6, 0, 786435, 6, 0, 851970, 6, 0, 917506, 6, 0, 983041, 6, 0, 1048577, 6, 0, 1114112, 6, 0, 1179648, 6, 0, 1310719, 6, 0, -327679, 6, 1, -720894, 6, 1, 1048578, 6, 0, 458751, 6, 0, 262141, 6, 0, 327678, 6, 0, 393214, 6, 0, 262140, 6, 0, 524287, 6, 0, 524288, 6, 0, 589824, 6, 0, 655361, 6, 2, -720902, 6, 0, -655367, 6, 0)
layer_1/name = "Paaltjes"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Tussenschotjes"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Tussenschotjes2"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = true
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("player")]
position_smoothing_enabled = true
script = ExtResource("4_vf1sj")
player = NodePath("../Sheep")

[node name="top" type="Marker2D" parent="Camera2D"]
position = Vector2(-7, -260)

[node name="right" type="Marker2D" parent="Camera2D"]
position = Vector2(452, 0)

[node name="left" type="Marker2D" parent="Camera2D"]
position = Vector2(-479, -6)

[node name="bot" type="Marker2D" parent="Camera2D"]
position = Vector2(-13, 258)

[node name="Sheep" parent="." instance=ExtResource("4_b5t7m")]
position = Vector2(-383, -21)

[node name="Humans" type="Node2D" parent="."]
y_sort_enabled = true
script = SubResource("GDScript_b82f2")

[node name="Human" parent="Humans" instance=ExtResource("5_204je")]
y_sort_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Powerups" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Trees" type="Node2D" parent="."]
y_sort_enabled = true

[connection signal="body_entered" from="CaptureArea" to="CaptureArea" method="_on_body_entered"]
[connection signal="body_exited" from="CaptureArea" to="CaptureArea" method="_on_body_exited"]
[connection signal="humanCaptured" from="CaptureArea" to="." method="_on_capture_area_human_captured"]
[connection signal="humanEscaped" from="CaptureArea" to="." method="_on_capture_area_human_escaped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
